Fixed the uv not fecting issue and renamed the script1.js to script.js and updatated whereever necessary

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather App</title>
+    <title>WeatherOut</title>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js'></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@3.0.0"></script>
@@ -85,6 +85,6 @@
             </div>
         </div>
     </div>
-    <script type="module" src="script1.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
